@@ -195,18 +195,9 @@ public class LongArgument extends Argument<Long> {
         }
 
         public LongArgument build() {
-            List<Filter<Long>> filters = switch (this.filters == null ? 0 : this.filters.size()) {
-                case 0 -> Collections.emptyList();
-                case 1 -> Collections.singletonList(this.filters.get(0));
-                default -> List.copyOf(this.filters);
-            };
-            List<Completion<Long>> completions = switch (this.completions == null ? 0 : this.completions.size()) {
-                case 0 -> Collections.emptyList();
-                case 1 -> Collections.singletonList(this.completions.get(0));
-                default -> List.copyOf(this.completions);
-            };
-
-            return new LongArgument(filters, notLongMessage, completions, filterByName);
+            List<Filter<Long>> filterList = this.filters == null ? List.of() : List.copyOf(this.filters);
+            List<Completion<Long>> completionList = this.completions == null ? List.of() : List.copyOf(this.completions);
+            return new LongArgument(filterList, notLongMessage, completionList, filterByName);
         }
 
         public String toString() {
